[package]
name = "rs-alloc"
version = "0.0.1"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "no-std alloc trait"
repository = "https://github.com/NeoCogi/rs-alloc"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-ctypes = "0.1.1"
libc = "0.2.76"
cfg-if = "0.1.10"